[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/industrial_9_square.png" type="Texture" id=1]
[ext_resource path="res://assets/red_x.png" type="Texture" id=2]
[ext_resource path="res://components/crafting_core.gd" type="Script" id=3]

[node name="CraftingCore" type="MarginContainer"]
pause_mode = 1
margin_right = 302.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
margin_left = 10.0
margin_right = 292.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_editor_description_": ""
}

[node name="InnerMargin" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/InnerMargin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 270.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/InnerMargin/VBoxContainer"]
margin_right = 258.0
margin_bottom = 89.0
size_flags_vertical = 3

[node name="CoreNameLabel" type="Label" parent="NinePatchRect/InnerMargin/VBoxContainer/HBoxContainer"]
margin_right = 234.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Crafting Core"

[node name="CancelButton" type="Button" parent="NinePatchRect/InnerMargin/VBoxContainer/HBoxContainer"]
margin_left = 238.0
margin_right = 258.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="CraftingIcon" type="TextureRect" parent="NinePatchRect/InnerMargin/VBoxContainer"]
margin_left = 79.0
margin_top = 93.0
margin_right = 179.0
margin_bottom = 193.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="CraftingNameLabel" type="Label" parent="NinePatchRect/InnerMargin/VBoxContainer"]
margin_top = 197.0
margin_right = 258.0
margin_bottom = 211.0
size_flags_vertical = 0
text = "Idle"
align = 1

[node name="CraftTimeLeft" type="Label" parent="NinePatchRect/InnerMargin/VBoxContainer"]
margin_top = 215.0
margin_right = 258.0
margin_bottom = 304.0
size_flags_vertical = 3
text = "0:00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="NinePatchRect/InnerMargin/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
